--- a/CycleRoutes/CycleRoutes.Shared/_Imports.razor
+++ b/CycleRoutes/CycleRoutes.Shared/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using CycleRoutes.Shared.Models
 @using CycleRoutes.Shared.Services
+@using CycleRoutes.Shared.Components
